<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4D2E0F6"
    android:backgroundTint="#A4D2E0F6"
    tools:context=".view.MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTxt"
        android:layout_width="278dp"
        android:layout_height="220dp"
        android:layout_marginTop="204dp"
        android:background="#774B8BED"
        android:paddingRight="10dp"
        android:scrollbarSize="8dp"
        android:soundEffectsEnabled="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewmsg"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:text="@string/msg"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="469dp"
        android:layout_height="85dp"
        android:background="#273D6A"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/meal_prep2"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        tools:layout_editor_absoluteX="-10dp"
        tools:layout_editor_absoluteY="-3dp" />

    <Button
        android:id="@+id/suggestbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:paddingStart="5dp"
        android:text="@string/categories"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewTxt" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/suggestFragment"
        android:layout_width="352dp"
        android:layout_height="158dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestbtn" />

    <SearchView
        android:id="@+id/Searchbar"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="368dp"
        android:layout_height="101dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="614dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/accountbtn"
            android:layout_width="136dp"
            android:layout_height="42dp"
            android:backgroundTint="#5C100D0D"
            android:text="@string/account"
            app:icon="@android:drawable/ic_menu_my_calendar"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/favbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5C100D0D"
            android:text="@string/fav"
            android:textColorLink="#990101"
            app:icon="@android:drawable/star_on"
            app:iconPadding="0dp"
            app:rippleColor="#FFC107"
            app:strokeColor="#FFC107" />

        <Button
            android:id="@+id/searchbtn"
            android:layout_width="121dp"
            android:layout_height="43dp"
            android:backgroundTint="#5C100D0D"
            android:text="@string/search"
            app:icon="@android:drawable/ic_menu_search"
            app:iconPadding="0dp" />
    </com.google.android.material.navigation.NavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>