<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MealDescription">

    <Button
        android:id="@+id/btnhome"
        android:layout_width="94dp"
        android:layout_height="44dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="#273D6A"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDetails"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="393dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetails" />

    <Button
        android:id="@+id/ingredientsbtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#273D6A"
        android:text="Ingredients"
        app:layout_constraintEnd_toStartOf="@+id/instrctbtn"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/instrctbtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#273D6A"
        android:text="Instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredientsbtn"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ingredientsFragment"
        android:layout_width="421dp"
        android:layout_height="428dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsbtn" />

    <Button
        android:id="@+id/accountbtn"
        android:layout_width="136dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#5C100D0D"
        android:text="@string/account"
        app:icon="@android:drawable/ic_menu_my_calendar"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/favbtn"
        app:layout_constraintTop_toTopOf="@+id/favbtn" />

    <Button
        android:id="@+id/favbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#5C100D0D"
        android:text="@string/fav"
        android:textColorLink="#990101"
        app:icon="@android:drawable/star_on"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FFC107"
        app:strokeColor="#FFC107" />

    <Button
        android:id="@+id/searchbtn"
        android:layout_width="121dp"
        android:layout_height="43dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#5C100D0D"
        android:text="@string/search"
        app:icon="@android:drawable/ic_menu_search"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toStartOf="@+id/accountbtn"
        app:layout_constraintTop_toTopOf="@+id/accountbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
