<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="409dp"
        android:layout_height="234dp"
        android:background="#273D6A"
        android:backgroundTint="#273D6A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="120dp"
        android:layout_height="107dp"
        android:layout_marginTop="72dp"
        android:background="#ffff"
        android:backgroundTint="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="41dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginEmail" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#577FD0"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="28dp"
        android:layout_height="22dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="235dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="43dp"
        android:layout_height="43dp"
        tools:layout_editor_absoluteX="222dp"
        tools:layout_editor_absoluteY="224dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="243dp"
        android:layout_height="35dp"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="52dp" />

    <TextView
        android:id="@+id/SignText"
        android:layout_width="174dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:text="@string/not_yet_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>